--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -101,8 +101,9 @@ body
 }*/
 
 .form_style {
-    width:500px;
-    margin:50px ;
+    /*width:500px;*/
+    margin:25px ;
     float:right;
-    top:-40px;
+    font-weight:bold;
+    /*top:-40px;*/
 }
